# oniai

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs
.github/: copilot-instructions.md
.github/skills/jj-vcs/: SKILL.md
benches/: regex.rs
doc/: BENCHMARKS.md  DESIGN.md  FUZZ.md  IR_DESIGN.md  JIT.md  PATTERNS.md  RE  TODO.md
doc/todos/: 01-first-byte-prefilter.md  02-simd-span.md  03-required-literal-prefilter.md  04-interp-span-simd.md  05-pure-span-fast-path.md  06-ascii-class-start-vectorize.md  perf-aho-corasick-literal-set.md  perf-alternation-many-alts.md  perf-alttrie-case-insensitive.md  perf-capture-overhead.md  perf-jit-inline-bitmap.md  perf-jit-span-quantifier.md  perf-lookbehind-start-strategy.md  perf-memchr-scanning.md  perf-simd-ascii-class-scan.md  perf-start-strategy-class.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_match.rs  fuzz_match_diff.rs  fuzz_pattern.rs
scripts/: fetch_unicode_data.sh
scripts/gen_unicode_tables/: Cargo.toml
scripts/gen_unicode_tables/src/: main.rs
src/: ast.rs  bytetrie.rs  casefold.rs  casefold_data.rs  casefold_trie.rs  charset.rs  compile.rs  error.rs  general_category.rs  lib.rs  parser.rs  vm.rs
src/data/: casefold_data.rs  general_category_data.rs  mod.rs  script_data.rs  unicode_prop_ranges_data.rs
src/ir/: build.rs  jit.rs  lower.rs  mod.rs  prefilter.rs  verify.rs
src/ir/pass/: dce.rs  guard.rs  liveness.rs  merge.rs  mod.rs  span.rs
src/jit/: builder.rs  helpers.rs  mod.rs
tests/: integration.rs  integration_test.rs
