[package]
name = "oniai"
version = "0.1.0"
edition = "2024"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }

[features]
default = ["jit"]
jit = [
    "dep:cranelift-codegen",
    "dep:cranelift-frontend",
    "dep:cranelift-jit",
    "dep:cranelift-module",
    "dep:cranelift-native",
]

[dependencies]
clap = { version = "4", features = ["derive"] }
aho-corasick = "1"
memchr = "2"
cranelift-codegen  = { version = "0.129.1", optional = true }
cranelift-frontend = { version = "0.129.1", optional = true }
cranelift-jit      = { version = "0.129.1", optional = true }
cranelift-module   = { version = "0.129.1", optional = true }
cranelift-native   = { version = "0.129.1", optional = true }

[build-dependencies]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
regex = "1"
fancy-regex = "0"
pcre2 = "0.2"

[[bench]]
name = "regex"
harness = false
